--- a/_characters/0001.md
+++ b/_characters/0001.md
@@ -2,38 +2,36 @@
 chapter: 1
 lesson: 1
 number: 1
-kanji: 日
+
+kanji: 山
+strokes: 3
+
+kunyomi: やま
+onyomi: サン
+
 meaning:
   - translations:
-    - ca: sol
-      en: sun
-      es: sol
-kunyomi: ひ／び<br>か
-onyomi: ニチ／ニ<br>(-ジツ)
-strokes: 4
+    - ca: やま (muntanya)
+      en: やま (mountain)
+      es: やま (montaña)
+
 words:
-  - kanji: 日
-    kana: ひ
+  - kanji: 山
+    kana: やま
     translations:
-    - ca: el sol, un dia
-      en: the sun, a day
-      es: el sol, un día
-  - kanji: 日本
-    kana: に・ほん／にっ・ぽん
+    - ca: muntanya
+      en: mountain
+      es: montaña
+  - kanji: 富士山
+    kana: ふ・じ・さん
     translations:
-    - ca: Japó
-      en: Japan
-      es: Japón
-  - kanji: 日曜日
-    kana: にち・よう・び
+    - ca: Mont Fuji
+      en: Mt.Fuji
+      es: Monte Fuji
+  - kanji: 登山
+    kana: と・ざん
     translations:
-    - ca: Diumenge
-      en: Sunday
-      es: Domingo
-  - kanji: 三日
-    kana: みっ・か
-    translations:
-    - ca: el 3er dia
-      en: the 3rd day
-      es: el 3er día
+    - ca: escalada
+      en: climbing
+      es: escalada
 ---
