--- a/_characters/0002.md
+++ b/_characters/0002.md
@@ -2,38 +2,36 @@
 chapter: 1
 lesson: 1
 number: 2
-kanji: 月
+
+kanji: 川
+strokes: 3
+
+kunyomi: かわ
+onyomi: セン
+
 meaning:
   - translations:
-    - ca: lluna
-      en: moon
-      es: luna
-kunyomi: つき
-onyomi: ゲッ<br>ーガッ
-strokes: 4
+    - ca: かわ (río)
+      en: かわ (river)
+      es: かわ (riu)
+
 words:
-  - kanji: 月
-    kana: つき
+  - kanji: 川
+    kana: かわ
     translations:
-    - ca: la lluna, un mes
-      en: the moon, a month
-      es: la luna, un mes
-  - kanji: 月曜日
-    kana: げつ・よう・び
+    - ca: riu
+      en: river
+      es: río
+  - kanji: 山川さん
+    kana: やま・かわ・さん
     translations:
-    - ca: Dilluns
-      en: Monday
-      es: Lunes
-  - kanji: １月
-    kana: いち・がつ
+    - ca: Sr./Sra. Yamakawa
+      en: Mr./Ms. Yamakawa
+      es: Sr./Sra. Yamakawa
+  - kanji: インダス川
+    kana: インダス・かわ
     translations:
-    - ca: Gener
-      en: January
-      es: Enero
-  - kanji: 一か月
-    kana: いっ・か・げつ
-    translations:
-    - ca: un mes
-      en: one month
-      es: un mes
+    - ca: L'Indus
+      en: the Indus River
+      es: el Río Indo
 ---
