--- a/_characters/0003.md
+++ b/_characters/0003.md
@@ -2,32 +2,42 @@
 chapter: 1
 lesson: 1
 number: 3
-kanji: 木
+
+kanji: 田
+strokes: 5
+
+kunyomi: た
+onyomi: デン
+
 meaning:
   - translations:
-    - ca: arbre
-      en: tree
-      es: árbol
-kunyomi: き
-onyomi: モク<br>ボク
-strokes: 4
+    - ca: た (camp d'arròs)
+      en: た (rice field)
+      es: た (arrozal)
+
 words:
-  - kanji: 木
-    kana: き
+  - kanji: 田
+    kana: たんぼ
     translations:
-    - ca: un arbre
-      en: a tree
-      es: un árbol
-  - kanji: 木曜日
-    kana: もく・よう・び
+    - ca: camp d'arròs
+      en: rice field
+      es: arrozal
+  - kanji: 山田さん
+    kana: やま・だ・さん
     translations:
-    - ca: Dijous
-      en: Thursday
-      es: Jueves
-  - kanji: 木村
-    kana: き・むら
+    - ca: Sr./Sra. Yamada
+      en: Mr./Ms. Yamada
+      es: Sr./Sra. Yamada
+  - kanji: 水田
+    kana: すい・でん
     translations:
-    - ca: Nom japonès
-      en: Japanese name
-      es: Nombre japonés
+    - ca: camp d'arròs
+      en: rice field
+      es: arrozal
+  - kanji: 油田
+    kana: ゆ・でん
+    translations:
+    - ca: terreny petrolífer
+      en: oil field
+      es: yacimiento petrolífero
 ---
