--- a/_characters/0005.md
+++ b/_characters/0005.md
@@ -2,26 +2,42 @@
 chapter: 1
 lesson: 1
 number: 5
-kanji: 川
+
+kanji: 月
+strokes: 4
+
+kunyomi: つき
+onyomi: ゲツ<br>ーガツ
+
 meaning:
   - translations:
-    - ca: riu
-      en: river
-      es: río
-kunyomi: かわ／ーがわ
-onyomi: （せン）
-strokes: 3
+    - ca: つき (lluna)<br>つき (mes)
+      en: つき (moon)<br>つき (month)
+      es: つき (luna)<br>つき (mes)
+
 words:
-  - kanji: 川
-    kana: かわ
+  - kanji: 月
+    kana: つき
     translations:
-    - ca: un riu
-      en: a river
-      es: un río
-  - kanji: ナイル川
-    kana: ないる・がわ
+    - ca: la lluna
+      en: the moon
+      es: la luna
+  - kanji: 月曜日
+    kana: げつ・よう・び
     translations:
-    - ca: el Riu Nil
-      en: the Nile River
-      es: el Río Nilo
+    - ca: Dilluns
+      en: Monday
+      es: Lunes
+  - kanji: 一月
+    kana: いち・がつ
+    translations:
+    - ca: Genere
+      en: January
+      es: Enero
+  - kanji: 今月
+    kana: こん・げつ
+    translations:
+    - ca: aquest mes
+      en: this month
+      es: este mes
 ---
