--- a/_characters/0006.md
+++ b/_characters/0006.md
@@ -2,32 +2,42 @@
 chapter: 1
 lesson: 1
 number: 6
-kanji: 田
+
+kanji: 火
+strokes: 4
+
+kunyomi: ひ
+onyomi: カ
+
 meaning:
   - translations:
-    - ca: camp d'arròs
-      en: rice field
-      es: campo de arroz
-kunyomi: た／ーだ
-onyomi: デン
-strokes: 5
+    - ca: ひ (foc)
+      en: ひ (fire)
+      es: ひ (fuego)
+
 words:
-  - kanji: 田んぼ
-    kana: た・んぼ
+  - kanji: 火
+    kana: ひ
     translations:
-    - ca: un camp d'arròs
-      en: a rice field
-      es: un campo de arroz
-  - kanji: 山田
-    kana: やま・だ
+    - ca: foc
+      en: fire
+      es: fuego
+  - kanji: 火曜日
+    kana: か・よう・び
     translations:
-    - ca: Nom japonès
-      en: Japanese name
-      es: Nombre japonés
-  - kanji: 田中
-    kana: た・なか
+    - ca: Dimarts
+      en: Tuesday
+      es: Martes
+  - kanji: 火山
+    kana: か・ざん
     translations:
-    - ca: Nom japonès
-      en: Japanese name
-      es: Nombre japonés
+    - ca: volcà
+      en: volcano
+      es: volcán
+  - kanji: 火事
+    kana: か・じ
+    translations:
+    - ca: incendi
+      en: fire
+      es: incendio
 ---
