--- a/_characters/0007.md
+++ b/_characters/0007.md
@@ -2,32 +2,42 @@
 chapter: 1
 lesson: 1
 number: 7
-kanji: 人
+
+kanji: 水
+strokes: 4
+
+kunyomi: みず
+onyomi: スイ
+
 meaning:
   - translations:
-    - ca: home<br>persona
-      en: man<br>person
-      es: hombre<br>persona
-kunyomi: ひと
-onyomi: ジン<br>ニン
-strokes: 2
+    - ca: みず (aigua)
+      en: みず (water)
+      es: みず (agua)
+
 words:
-  - kanji: 人
-    kana: ひと
+  - kanji: 水
+    kana: みず
     translations:
-    - ca: home, una persona
-      en: man, a person
-      es: hombre, una persona
-  - kanji: ３人
-    kana: さん・にん
+    - ca: aigua
+      en: water
+      es: agua
+  - kanji: 水曜日
+    kana: すい・よう・び
     translations:
-    - ca: tres persones
-      en: three people
-      es: tres personas
-  - kanji: 日本人
-    kana: に・ほん・じん
+    - ca: Dimecres
+      en: Wednesday
+      es: Miércoles
+  - kanji: 水田
+    kana: すい・でん
     translations:
-    - ca: un japonès
-      en: a Japanese
-      es: un japonés
+    - ca: camp d¡arròs
+      en: rice field
+      es: arrozal
+  - kanji: 水道
+    kana: すい・どう
+    translations:
+    - ca: subministrament d'aigua
+      en: waterworks
+      es: suministro de agua
 ---
