--- a/_characters/0008.md
+++ b/_characters/0008.md
@@ -2,38 +2,30 @@
 chapter: 1
 lesson: 1
 number: 8
-kanji: 口
+
+kanji: 木
+strokes: 4
+
+kunyomi: き
+onyomi: モク
+
 meaning:
   - translations:
-    - ca: boca
-      en: mouth
-      es: boca
-kunyomi: くち／ーぐち
-onyomi: コウ
-strokes: 3
+    - ca: き (arbre)
+      en: き (tree)
+      es: き (árbol)
+
 words:
-  - kanji: 口
-    kana: くち
+  - kanji: 木
+    kana: き
     translations:
-    - ca: boca
-      en: mouth
-      es: boca
-  - kanji: 入口
-    kana: いり・ぐち
+    - ca: arbre
+      en: tree
+      es: árbol
+  - kanji: 木曜日
+    kana: もく・よう・び
     translations:
-    - ca: una entrada
-      en: an entrance
-      es: una entrada
-  - kanji: 出口
-    kana: で・ぐち
-    translations:
-    - ca: una sortida
-      en: an exit
-      es: una salida
-  - kanji: 人口
-    kana: じん・こう
-    translations:
-    - ca: població
-      en: population
-      es: población
+    - ca: Dijous
+      en: Thursday
+      es: Jueves
 ---
