--- a/_characters/0004.md
+++ b/_characters/0004.md
@@ -2,38 +2,42 @@
 chapter: 1
 lesson: 1
 number: 4
-kanji: 山
+
+kanji: 日
+strokes: 4
+
+kunyomi: ひ／び
+onyomi: ニチ／ニ<br>ジツ
+
 meaning:
   - translations:
-    - ca: muntanya
-      en: mountain
-      es: montaña
-kunyomi: やま
-onyomi: サン
-strokes: 3
+    - ca: ひ (sol)<br>ひ (dia)
+      en: ひ (sun)<br>ひ (day)
+      es: ひ (sol)<br>ひ (día)
+
 words:
-  - kanji: 山
-    kana: やま
+  - kanji: 日
+    kana: ひ
     translations:
-    - ca: una muntanya
-      en: a mountain
-      es: una montaña
-  - kanji: 富士山
-    kana: ふ・じ・さん
+    - ca: el sol
+      en: the sun
+      es: el sol
+  - kanji: 日曜日
+    kana: にち・よう・び
     translations:
-    - ca: Mont Fuji
-      en: Mt. Fuji
-      es: Monte Fuji
-  - kanji: 山下
-    kana: やま・した
+    - ca: Diumnege
+      en: Sunday
+      es: Domingo
+  - kanji: 日本
+    kana: に・ほん／にっ・ぽん
     translations:
-    - ca: Nom japonès
-      en: Japanese name
-      es: Nombre japonés
-  - kanji: 火山
-    kana: か・ざん
+    - ca: Japó
+      en: Japan
+      es: Japón
+  - kanji: 休日
+    kana: きゅう・じつ
     translations:
-    - ca: un volcà
-      en: a volcano
-      es: un volcán
+    - ca: dia de descans
+      en: holiday
+      es: día de descanso
 ---
