--- a/_characters/0009.md
+++ b/_characters/0009.md
@@ -2,32 +2,36 @@
 chapter: 1
 lesson: 1
 number: 9
-kanji: 車
+
+kanji: 金
+strokes: 8
+
+kunyomi: かね
+onyomi: キン
+
 meaning:
   - translations:
-    - ca: cotxe
-      en: car
-      es: coche
-kunyomi: くるま
-onyomi: シャ
-strokes: 7
+    - ca: きん (or)<br>かね (diners)
+      en: きん (gold)<br>かね (money)
+      es: きん (oro)<br>かね (dinero)
+
 words:
-  - kanji: 車
-    kana: くるま
+  - kanji: お金
+    kana: お・かね
     translations:
-    - ca: un cotxe
-      en: a car
-      es: un coche
-  - kanji: 自動車
-    kana: じ・どう・しゃ
+    - ca: diners
+      en: money
+      es: dinero
+  - kanji: 金
+    kana: きん
     translations:
-    - ca: un automòbil
-      en: an automobile # original = a car, an automobile
-      es: un automóvil
-  - kanji: 電車
-    kana: でん・しゃ
+    - ca: or
+      en: gold
+      es: oro
+  - kanji: 金曜日
+    kana: きん・よう・び
     translations:
-    - ca: un tren
-      en: a train
-      es: un tren
+    - ca: Divendres
+      en: Friday
+      es: Viernes
 ---
