--- a/_characters/0010.md
+++ b/_characters/0010.md
@@ -2,26 +2,36 @@
 chapter: 1
 lesson: 1
 number: 10
-kanji: 門
+
+kanji: 土
+strokes: 3
+
+kunyomi: つち
+onyomi: ド／ト
+
 meaning:
   - translations:
-    - ca: porta
-      en: gate
-      es: puerta
-kunyomi: （かど）
-onyomi: モン
-strokes: 8
+    - ca: つち (terra)
+      en: つち (soil)
+      es: つち (tierra)
+
 words:
-  - kanji: 門
-    kana: もん
+  - kanji: 土
+    kana: つち
     translations:
-    - ca: una porta
-      en: a gate
-      es: una puerta
-  - kanji: 専門
-    kana: せん・もん
+    - ca: sòl; terra
+      en: soil; earth
+      es: suelo; tierra
+  - kanji: 土曜日
+    kana: ど・よう・び
     translations:
-    - ca: una especialitat
-      en: a speciality
-      es: una especialidad
+    - ca: Dissabte
+      en: Saturday
+      es: Sábado
+  - kanji: 土地
+    kana: と・ち
+    translations:
+    - ca: terreny
+      en: land
+      es: terreno
 ---
