--- a/_characters/0011.md
+++ b/_characters/0011.md
@@ -2,32 +2,42 @@
 chapter: 1
 lesson: 2
 number: 11
-kanji: 火
+
+kanji: 一
+strokes: 1
+
+kunyomi: ひとーつ
+onyomi: イチ／イッー
+
 meaning:
   - translations:
-    - ca: foc
-      en: fire
-      es: fuego
-kunyomi: ひ
-onyomi: カ
-strokes: 4
+    - ca: いち (u)
+      en: いち (one)
+      es: いち (uno)
+
 words:
-  - kanji: 火
-    kana: ひ
+  - kanji: 一つ
+    kana: ひと・つ
     translations:
-    - ca: foc
-      en: fire
-      es: fuego
-  - kanji: 火曜日
-    kana: か・よう・び
+    - ca: una (cosa)
+      en: one (thing)
+      es: una (cosa)
+  - kanji: 一月
+    kana: いち・がつ
     translations:
-    - ca: Dimarts
-      en: Tuesday
-      es: Martes
-  - kanji: 火山
-    kana: か・ざん
+    - ca: Genere
+      en: January
+      es: Enero
+  - kanji: 一日
+    kana: *ついたち
     translations:
-    - ca: un volcà
-      en: a volcano
-      es: un volcán
+    - ca: el 1r dia del mes
+      en: the 1st day of a month
+      es: el 1er día del mes
+  - kanji: 一日
+    kana: いち・にち
+    translations:
+    - ca: un dia
+      en: one day
+      es: un día
 ---
