--- a/_kanji/0001.md
+++ b/_kanji/0001.md
@@ -1,5 +1,5 @@
 ---
-chapter: 1
+part: 1
 lesson: 1
 number: 1
 
@@ -15,20 +15,20 @@ meaning:
       en: やま (mountain)
       es: やま (montaña)
 
-words:
-  - kanji: 山
+compound_words:
+  - word: 山
     kana: やま
     translations:
     - ca: muntanya
       en: mountain
       es: montaña
-  - kanji: 富士山
+  - word: 富士山
     kana: ふ・じ・さん
     translations:
     - ca: Mont Fuji
       en: Mt.Fuji
       es: Monte Fuji
-  - kanji: 登山
+  - word: 登山
     kana: と・ざん
     translations:
     - ca: escalada
