--- a/_kanji/0002.md
+++ b/_kanji/0002.md
@@ -1,5 +1,5 @@
 ---
-chapter: 1
+part: 1
 lesson: 1
 number: 2
 
@@ -15,20 +15,20 @@ meaning:
       en: かわ (river)
       es: かわ (riu)
 
-words:
-  - kanji: 川
+compound_words:
+  - word: 川
     kana: かわ
     translations:
     - ca: riu
       en: river
       es: río
-  - kanji: 山川さん
+  - word: 山川さん
     kana: やま・かわ・さん
     translations:
     - ca: Sr./Sra. Yamakawa
       en: Mr./Ms. Yamakawa
       es: Sr./Sra. Yamakawa
-  - kanji: インダス川
+  - word: インダス川
     kana: インダス・かわ
     translations:
     - ca: L'Indus
