--- a/_kanji/0003.md
+++ b/_kanji/0003.md
@@ -1,5 +1,5 @@
 ---
-chapter: 1
+part: 1
 lesson: 1
 number: 3
 
@@ -15,26 +15,26 @@ meaning:
       en: た (rice field)
       es: た (arrozal)
 
-words:
-  - kanji: 田
+compound_words:
+  - word: 田
     kana: たんぼ
     translations:
     - ca: camp d'arròs
       en: rice field
       es: arrozal
-  - kanji: 山田さん
+  - word: 山田さん
     kana: やま・だ・さん
     translations:
     - ca: Sr./Sra. Yamada
       en: Mr./Ms. Yamada
       es: Sr./Sra. Yamada
-  - kanji: 水田
+  - word: 水田
     kana: すい・でん
     translations:
     - ca: camp d'arròs
       en: rice field
       es: arrozal
-  - kanji: 油田
+  - word: 油田
     kana: ゆ・でん
     translations:
     - ca: terreny petrolífer
