--- a/_kanji/0004.md
+++ b/_kanji/0004.md
@@ -1,5 +1,5 @@
 ---
-chapter: 1
+part: 1
 lesson: 1
 number: 4
 
@@ -15,26 +15,26 @@ meaning:
       en: ひ (sun)<br>ひ (day)
       es: ひ (sol)<br>ひ (día)
 
-words:
-  - kanji: 日
+compound_words:
+  - word: 日
     kana: ひ
     translations:
     - ca: el sol
       en: the sun
       es: el sol
-  - kanji: 日曜日
+  - word: 日曜日
     kana: にち・よう・び
     translations:
     - ca: Diumnege
       en: Sunday
       es: Domingo
-  - kanji: 日本
+  - word: 日本
     kana: に・ほん／にっ・ぽん
     translations:
     - ca: Japó
       en: Japan
       es: Japón
-  - kanji: 休日
+  - word: 休日
     kana: きゅう・じつ
     translations:
     - ca: dia de descans
