--- a/_kanji/0005.md
+++ b/_kanji/0005.md
@@ -1,5 +1,5 @@
 ---
-chapter: 1
+part: 1
 lesson: 1
 number: 5
 
@@ -15,26 +15,26 @@ meaning:
       en: つき (moon)<br>つき (month)
       es: つき (luna)<br>つき (mes)
 
-words:
-  - kanji: 月
+compound_words:
+  - word: 月
     kana: つき
     translations:
     - ca: la lluna
       en: the moon
       es: la luna
-  - kanji: 月曜日
+  - word: 月曜日
     kana: げつ・よう・び
     translations:
     - ca: Dilluns
       en: Monday
       es: Lunes
-  - kanji: 一月
+  - word: 一月
     kana: いち・がつ
     translations:
     - ca: Genere
       en: January
       es: Enero
-  - kanji: 今月
+  - word: 今月
     kana: こん・げつ
     translations:
     - ca: aquest mes
