--- a/_kanji/0006.md
+++ b/_kanji/0006.md
@@ -1,5 +1,5 @@
 ---
-chapter: 1
+part: 1
 lesson: 1
 number: 6
 
@@ -15,26 +15,26 @@ meaning:
       en: ひ (fire)
       es: ひ (fuego)
 
-words:
-  - kanji: 火
+compound_words:
+  - word: 火
     kana: ひ
     translations:
     - ca: foc
       en: fire
       es: fuego
-  - kanji: 火曜日
+  - word: 火曜日
     kana: か・よう・び
     translations:
     - ca: Dimarts
       en: Tuesday
       es: Martes
-  - kanji: 火山
+  - word: 火山
     kana: か・ざん
     translations:
     - ca: volcà
       en: volcano
       es: volcán
-  - kanji: 火事
+  - word: 火事
     kana: か・じ
     translations:
     - ca: incendi
