--- a/_kanji/0008.md
+++ b/_kanji/0008.md
@@ -1,5 +1,5 @@
 ---
-chapter: 1
+part: 1
 lesson: 1
 number: 8
 
@@ -15,14 +15,14 @@ meaning:
       en: き (tree)
       es: き (árbol)
 
-words:
-  - kanji: 木
+compound_words:
+  - word: 木
     kana: き
     translations:
     - ca: arbre
       en: tree
       es: árbol
-  - kanji: 木曜日
+  - word: 木曜日
     kana: もく・よう・び
     translations:
     - ca: Dijous
