--- a/_kanji/0009.md
+++ b/_kanji/0009.md
@@ -1,5 +1,5 @@
 ---
-chapter: 1
+part: 1
 lesson: 1
 number: 9
 
@@ -15,20 +15,20 @@ meaning:
       en: きん (gold)<br>かね (money)
       es: きん (oro)<br>かね (dinero)
 
-words:
-  - kanji: お金
+compound_words:
+  - word: お金
     kana: お・かね
     translations:
     - ca: diners
       en: money
       es: dinero
-  - kanji: 金
+  - word: 金
     kana: きん
     translations:
     - ca: or
       en: gold
       es: oro
-  - kanji: 金曜日
+  - word: 金曜日
     kana: きん・よう・び
     translations:
     - ca: Divendres
