--- a/_kanji/0010.md
+++ b/_kanji/0010.md
@@ -1,5 +1,5 @@
 ---
-chapter: 1
+part: 1
 lesson: 1
 number: 10
 
@@ -15,20 +15,20 @@ meaning:
       en: つち (soil)
       es: つち (tierra)
 
-words:
-  - kanji: 土
+compound_words:
+  - word: 土
     kana: つち
     translations:
     - ca: sòl; terra
       en: soil; earth
       es: suelo; tierra
-  - kanji: 土曜日
+  - word: 土曜日
     kana: ど・よう・び
     translations:
     - ca: Dissabte
       en: Saturday
       es: Sábado
-  - kanji: 土地
+  - word: 土地
     kana: と・ち
     translations:
     - ca: terreny
