--- a/_kanji/0011.md
+++ b/_kanji/0011.md
@@ -1,5 +1,5 @@
 ---
-chapter: 1
+part: 1
 lesson: 2
 number: 11
 
@@ -15,26 +15,26 @@ meaning:
       en: いち (one)
       es: いち (uno)
 
-words:
-  - kanji: 一つ
+compound_words:
+  - word: 一つ
     kana: ひと・つ
     translations:
     - ca: una (cosa)
       en: one (thing)
       es: una (cosa)
-  - kanji: 一月
+  - word: 一月
     kana: いち・がつ
     translations:
     - ca: Genere
       en: January
       es: Enero
-  - kanji: 一日
-    kana: *ついたち
+  - word: 一日
+    kana: ついたち
     translations:
     - ca: el 1r dia del mes
       en: the 1st day of a month
       es: el 1er día del mes
-  - kanji: 一日
+  - word: 一日
     kana: いち・にち
     translations:
     - ca: un dia
