--- a/_kanji/0012.md
+++ b/_kanji/0012.md
@@ -1,5 +1,5 @@
 ---
-chapter: 1
+part: 1
 lesson: 2
 number: 12
 
@@ -15,26 +15,26 @@ meaning:
       en: に (two)
       es: に (dos)
 
-words:
-  - kanji: 二つ
+compound_words:
+  - word: 二つ
     kana: ふた・つ
     translations:
     - ca: dues (coses)
       en: two (things)
       es: dos (cosas)
-  - kanji: 二月
+  - word: 二月
     kana: に・がつ
     translations:
     - ca: Febrer
       en: February
       es: Febrero
-  - kanji: 二日
+  - word: 二日
     kana: ふつ・か
     translations:
     - ca: el 2n dia del mes
       en: the 2nd day of a month
       es: el 2º día del mes
-  - kanji: 二人
+  - word: 二人
     kana: ふたり
     translations:
     - ca: dues persones
