--- a/_kanji/0013.md
+++ b/_kanji/0013.md
@@ -1,5 +1,5 @@
 ---
-chapter: 1
+part: 1
 lesson: 2
 number: 13
 
@@ -15,26 +15,26 @@ meaning:
       en: さん (three)
       es: さん (tres)
 
-words:
-  - kanji: 三つ
+compound_words:
+  - word: 三つ
     kana: みっ・つ
     translations:
     - ca: tres (coses)
       en: three (things)
       es: tres (cosas)
-  - kanji: 三月
+  - word: 三月
     kana: さん・がつ
     translations:
     - ca: Març
       en: March
       es: Marzo
-  - kanji: 三日
+  - word: 三日
     kana: みっ・か
     translations:
     - ca: el 3r dia del mes
       en: the 3rd day of a month
       es: el 3er día del mes
-  - kanji: 三角
+  - word: 三角
     kana: さん・かく
     translations:
     - ca: triangle
