--- a/_kanji/0014.md
+++ b/_kanji/0014.md
@@ -1,5 +1,5 @@
 ---
-chapter: 1
+part: 1
 lesson: 2
 number: 14
 
@@ -15,26 +15,26 @@ meaning:
       en: よん (four)
       es: よん (cuatro)
 
-words:
-  - kanji: 四
+compound_words:
+  - word: 四
     kana: よん
     translations:
     - ca: quatre
       en: four
       es: cuatro
-  - kanji: 四つ
+  - word: 四つ
     kana: よっ・つ
     translations:
     - ca: quatre (coses)
       en: four (things)
       es: cuatro (cosas)
-  - kanji: 四月
+  - word: 四月
     kana: し・がつ
     translations:
     - ca: Abril
       en: April
       es: Abril
-  - kanji: 四日
+  - word: 四日
     kana: よっ・か
     translations:
     - ca: el 4t dia del mes
