--- a/_kanji/0015.md
+++ b/_kanji/0015.md
@@ -1,5 +1,5 @@
 ---
-chapter: 1
+part: 1
 lesson: 2
 number: 15
 
@@ -15,26 +15,26 @@ meaning:
       en: ご (five)
       es: ご (cinco)
 
-words:
-  - kanji: 五つ
+compound_words:
+  - word: 五つ
     kana: いつ・つ
     translations:
     - ca: cinc (coses)
       en: five (things)
       es: cinco (cosas)
-  - kanji: 五月
+  - word: 五月
     kana: ご・がつ
     translations:
     - ca: Maig
       en: May
       es: Mayo
-  - kanji: 五日
+  - word: 五日
     kana: いつ・か
     translations:
     - ca: el 5é dia del mes
       en: the 5th day of a month
       es: el 5º día del mes
-  - kanji: 五円
+  - word: 五円
     kana: ご・えん
     translations:
     - ca: cinc iens
