--- a/_kanji/0016.md
+++ b/_kanji/0016.md
@@ -1,5 +1,5 @@
 ---
-chapter: 1
+part: 1
 lesson: 2
 number: 16
 
@@ -15,26 +15,26 @@ meaning:
       en: ろく (six)
       es: ろく (seis)
 
-words:
-  - kanji: 六つ
+compound_words:
+  - word: 六つ
     kana: むっ・つ
     translations:
     - ca: sis (coses)
       en: six (things)
       es: seis (cosas)
-  - kanji: 六月
+  - word: 六月
     kana: ろく・がつ
     translations:
     - ca: Juny
       en: June
       es: Junio
-  - kanji: 六日
-    kana: *むい・か
+  - word: 六日
+    kana: むい・か
     translations:
     - ca: el 6é dia del mes
       en: the 6th day of a month
       es: el 6º día del mes
-  - kanji: 六本木
+  - word: 六本木
     kana: ろっ・ぽん・ぎ
     translations:
     - ca: Roppongi
