--- a/_kanji/0017.md
+++ b/_kanji/0017.md
@@ -1,5 +1,5 @@
 ---
-chapter: 1
+part: 1
 lesson: 2
 number: 17
 
@@ -15,27 +15,27 @@ meaning:
       en: なな (seven)
       es: なな (siete)
 
-words:
-  - kanji: 七
+compound_words:
+  - word: 七
     kana: なな
     translations:
     - ca: set
       en: seven
       es: siete
-  - kanji: 七つ
+  - word: 七つ
     kana: なな・つ
     translations:
     - ca: set (coses)
       en: seven (things)
       es: siete (cosas)
-  - kanji: 七月
+  - word: 七月
     kana: しち・がつ
     translations:
     - ca: Juliol
       en: July
       es: Julio
-  - kanji: 七日
-    kana: *なの・か
+  - word: 七日
+    kana: なの・か
     translations:
     - ca: el 7é dia del mes
       en: the 7th day of a month
