--- a/_kanji/0018.md
+++ b/_kanji/0018.md
@@ -1,5 +1,5 @@
 ---
-chapter: 1
+part: 1
 lesson: 2
 number: 18
 
@@ -15,26 +15,26 @@ meaning:
       en: はち (eight)
       es: はち (ocho)
 
-words:
-  - kanji: 八つ
+compound_words:
+  - word: 八つ
     kana: やっ・つ
     translations:
     - ca: vuit (coses)
       en: eight (things)
       es: ocho (cosas)
-  - kanji: 八月
+  - word: 八月
     kana: はち・がつ
     translations:
     - ca: Agost
       en: August
       es: Agosto
-  - kanji: 八日
-    kana: *よう・か
+  - word: 八日
+    kana: よう・か
     translations:
     - ca: el 8é dia del mes
       en: the 8th day of a month
       es: el 8º día del mes
-  - kanji: 八百屋
+  - word: 八百屋
     kana: や・お・や
     translations:
     - ca: verduleria
