--- a/_kanji/0019.md
+++ b/_kanji/0019.md
@@ -1,5 +1,5 @@
 ---
-chapter: 1
+part: 1
 lesson: 2
 number: 19
 
@@ -15,26 +15,26 @@ meaning:
       en: きゅう (nine)
       es: きゅう (nueve)
 
-words:
-  - kanji: 九つ
+compound_words:
+  - word: 九つ
     kana: ここの・つ
     translations:
     - ca: nou (coses)
       en: nine (things)
       es: nueve (cosas)
-  - kanji: 九月
+  - word: 九月
     kana: く・がつ
     translations:
     - ca: Setembre
       en: September
       es: Septiembre
-  - kanji: 九日
+  - word: 九日
     kana: ここの・か
     translations:
     - ca: el 9é dia del mes
       en: the 9th day of a month
       es: el 9º día del mes
-  - kanji: 九州
+  - word: 九州
     kana: きゅう・しゅう
     translations:
     - ca: Kyūshū
