--- a/_kanji/0020.md
+++ b/_kanji/0020.md
@@ -1,5 +1,5 @@
 ---
-chapter: 1
+part: 1
 lesson: 2
 number: 20
 
@@ -15,26 +15,26 @@ meaning:
       en: じゅう (ten)
       es: じゅう (diez)
 
-words:
-  - kanji: 十
+compound_words:
+  - word: 十
     kana: とお／じゅう
     translations:
     - ca: deu
       en: ten
       es: diez
-  - kanji: 十月
+  - word: 十月
     kana: じゅう・がつ
     translations:
     - ca: Octubre
       en: October
       es: Octubre
-  - kanji: 十日
+  - word: 十日
     kana: とお・か
     translations:
     - ca: el 10é dia del mes
       en: the 10th day of a month
       es: el 10º día del mes
-  - kanji: 十分な
+  - word: 十分な
     kana: じゅう・ぶん・な
     translations:
     - ca: suficient
