--- a/_kanji/0007.md
+++ b/_kanji/0007.md
@@ -1,5 +1,5 @@
 ---
-chapter: 1
+part: 1
 lesson: 1
 number: 7
 
@@ -15,26 +15,26 @@ meaning:
       en: みず (water)
       es: みず (agua)
 
-words:
-  - kanji: 水
+compound_words:
+  - word: 水
     kana: みず
     translations:
     - ca: aigua
       en: water
       es: agua
-  - kanji: 水曜日
+  - word: 水曜日
     kana: すい・よう・び
     translations:
     - ca: Dimecres
       en: Wednesday
       es: Miércoles
-  - kanji: 水田
+  - word: 水田
     kana: すい・でん
     translations:
     - ca: camp d¡arròs
       en: rice field
       es: arrozal
-  - kanji: 水道
+  - word: 水道
     kana: すい・どう
     translations:
     - ca: subministrament d'aigua
