--- a/_kanji/0111.md
+++ b/_kanji/0111.md
@@ -17,13 +17,13 @@ meaning:
 
 compound_words:
   - word: 住む
-    kana: すむ
+    kana: す・む
     translations:
     - ca: viure
       en: to live
       es: vivir
   - word: 住民
-    kana: じゅうみん
+    kana: じゅう・みん
     translations:
     - ca: habitants
       en: inhabitants
