--- a/_kanji/0112.md
+++ b/_kanji/0112.md
@@ -23,19 +23,19 @@ compound_words:
       en: place
       es: lugar
   - word: 住所
-    kana: じゅうしょ
+    kana: じゅう・しょ
     translations:
     - ca: adreça
       en: address
       es: dirección
   - word: 台所
-    kana: だいどころ
+    kana: だい・どころ
     translations:
     - ca: cuina
       en: kitchen
       es: cocina
   - word: 場所
-    kana: ばしょ
+    kana: ば・しょ
     translations:
     - ca: lloc
       en: place
