--- a/_kanji/0114.md
+++ b/_kanji/0114.md
@@ -17,19 +17,19 @@ meaning:
 
 compound_words:
   - word: 東京都
-    kana: とうきょうと
+    kana: とう・きょう・と
     translations:
     - ca: Tòquio, metròpoli de
       en: Tokyo, metropolis of
       es: Tokio, metrópolis de
   - word: 都合がいい
-    kana: つごうがいい
+    kana: つ・ごう・が・いい
     translations:
     - ca: convenient
       en: convenient
       es: convenient
   - word: 首都
-    kana: しゅと
+    kana: しゅ・と
     translations:
     - ca: capital
       en: capital
