--- a/_kanji/0116.md
+++ b/_kanji/0116.md
@@ -17,13 +17,13 @@ meaning:
 
 compound_words:
   - word: 山口県
-    kana: やまぐちけん
+    kana: やま・ぐち・けん
     translations:
     - ca: Yamaguchi, prefectura de
       en: Yamaguchi prefecture
       es: Yamaguchi, prefectura de
   - word: 県知事
-    kana: けんちじ
+    kana: けん・ち・じ
     translations:
     - ca: governador de la prefectura
       en: prefectural governor
