--- a/_kanji/0117.md
+++ b/_kanji/0117.md
@@ -23,13 +23,13 @@ compound_words:
       en: Kyoto city
       es: Kioto, ciudad de
   - word: 市長
-    kana: しちょう
+    kana: し・ちょう
     translations:
     - ca: alcalde
       en: mayor
       es: alcalde
   - word: 市場
-    kana: いちば
+    kana: いち・ば
     translations:
     - ca: mercat
       en: market
