--- a/_kanji/0118.md
+++ b/_kanji/0118.md
@@ -17,19 +17,19 @@ meaning:
 
 compound_words:
   - word: 北区
-    kana: きたく
+    kana: きた・く
     translations:
     - ca: Kita, districte de
       en: Kita ward
       es: Kita, distrito de
   - word: 文京区
-    kana: ぶんきょうく
+    kana: ぶん・きょう・く
     translations:
     - ca: Bunkyō, districte de
       en: Bunkyō ward
       es: Bunkyō, distrito de
   - word: 区長
-    kana: くちょう
+    kana: く・ちょう
     translations:
     - ca: regidor del districte
       en: ward mayor
