--- a/_kanji/0119.md
+++ b/_kanji/0119.md
@@ -23,13 +23,13 @@ compound_words:
       en: town
       es: pueblo
   - word: 下町
-    kana: したまち
+    kana: した・まち
     translations:
     - ca: centre de la ciutat
       en: downtown
       es: centro de la ciudad
   - word: 町長
-    kana: ちょうちょう
+    kana: ちょう・ちょう
     translations:
     - ca: alcalde del poble
       en: town leader
