--- a/_kanji/0120.md
+++ b/_kanji/0120.md
@@ -23,13 +23,13 @@ compound_words:
       en: village
       es: aldea
   - word: 村人
-    kana: むらびと
+    kana: むら・びと
     translations:
     - ca: vilatà
       en: villager
       es: aldeano
   - word: 村長
-    kana: そんちょう
+    kana: そん・ちょう
     translations:
     - ca: cap de la vila
       en: village leader
