--- a/_kanji/0115.md
+++ b/_kanji/0115.md
@@ -17,19 +17,19 @@ meaning:
 
 compound_words:
   - word: 京都府
-    kana: きょうとふ
+    kana: きょう・と・ふ
     translations:
     - ca: Kyoto, prefectura de
       en: Kyoto prefecture
       es: Kioto, prefectura de
   - word: 大阪府
-    kana: おおさかふ
+    kana: おお・さか・ふ
     translations:
     - ca: Osaka, prefectura de
       en: Osaka prefecture
       es: Osaka, prefectura de
   - word: 政府
-    kana: せいふ
+    kana: せい・ふ
     translations:
     - ca: govern
       en: government
