--- a/_kanji/0117.md
+++ b/_kanji/0117.md
@@ -17,7 +17,7 @@ meaning:
 
 compound_words:
   - word: 京都市
-    kana: きょうとし
+    kana: きょうと・し
     translations:
     - ca: Kyoto, ciutat de
       en: Kyoto city
