--- a/_kanji/0007.md
+++ b/_kanji/0007.md
@@ -31,7 +31,7 @@ compound_words:
   - word: 水田
     kana: すい・でん
     translations:
-    - ca: camp d¡arròs
+    - ca: camp d'arròs
       en: rice field
       es: arrozal
   - word: 水道
