--- a/_kanji/0005.md
+++ b/_kanji/0005.md
@@ -31,7 +31,7 @@ compound_words:
   - word: 一月
     kana: いち・がつ
     translations:
-    - ca: Genere
+    - ca: Gener
       en: January
       es: Enero
   - word: 今月
