--- a/_kanji/0151.md
+++ b/_kanji/0151.md
@@ -17,19 +17,19 @@ meaning:
 
 compound_words:
   - word: 映す
-    kana: うつす
+    kana: うつ・す
     translations:
     - ca: reflectir
       en: to reflect
       es: reflejar
   - word: 映画
-    kana: えいが
+    kana: えい・が
     translations:
     - ca: pel·lícula
       en: movie
       es: película
   - word: 映画館
-    kana: えいがかん
+    kana: えい・が・かん
     translations:
     - ca: cinema
       en: movie theater
