--- a/_kanji/0152.md
+++ b/_kanji/0152.md
@@ -18,19 +18,19 @@ meaning:
 
 compound_words:
   - word: 計画
-    kana: けいかく
+    kana: けい・かく
     translations:
     - ca: pla
       en: plan
       es: plan
   - word: 画家
-    kana: がか
+    kana: が・か
     translations:
     - ca: pintor pintora
       en: painter
       es: pintor, ra
   - word: 日本画
-    kana: にほんが
+    kana: に・ほん・が
     translations:
     - ca: pintura japonesa
       en: Japanese painting
