--- a/_kanji/0153.md
+++ b/_kanji/0153.md
@@ -23,13 +23,13 @@ compound_words:
       en: sound
       es: sonido
   - word: 発音
-    kana: はつおん
+    kana: はつ・おん
     translations:
     - ca: pronunciació
       en: pronunciation
       es: pronunciación
   - word: 高音
-    kana: こうおん
+    kana: こう・おん
     translations:
     - ca: to agut
       en: high note
