--- a/_kanji/0154.md
+++ b/_kanji/0154.md
@@ -17,19 +17,19 @@ meaning:
 
 compound_words:
   - word: 楽しい
-    kana: たのしい
+    kana: たの・しい
     translations:
     - ca: divertit -ida
       en: enjoyable
       es: divertido, da
   - word: 音楽
-    kana: おんがく
+    kana: おん・がく
     translations:
     - ca: música
       en: music
       es: música
   - word: 楽な
-    kana: らくな
+    kana: らく・な
     translations:
     - ca: fàcil
       en: easy
