--- a/_kanji/0155.md
+++ b/_kanji/0155.md
@@ -17,13 +17,13 @@ meaning:
 
 compound_words:
   - word: 歌う
-    kana: うたう
+    kana: うた・う
     translations:
     - ca: cantar
       en: to sing
       es: cantar
   - word: 歌手
-    kana: かしゅ
+    kana: か・しゅ
     translations:
     - ca: cantant
       en: singer
