--- a/_kanji/0156.md
+++ b/_kanji/0156.md
@@ -17,13 +17,13 @@ meaning:
 
 compound_words:
   - word: 写真
-    kana: しゃしん
+    kana: しゃ・しん
     translations:
     - ca: una fotografia
       en: a photograph
       es: una fotografía
   - word: 写す
-    kana: うつす
+    kana: うつ・す
     translations:
     - ca: copiar
       en: to copy
