--- a/_kanji/0157.md
+++ b/_kanji/0157.md
@@ -17,19 +17,19 @@ meaning:
 
 compound_words:
   - word: 真ん中
-    kana: まんなか
+    kana: ま・ん・なか
     translations:
     - ca: el mig
       en: midmost
       es: el medio
   - word: 真っ白
-    kana: まっしろ
+    kana: まっ・しろ
     translations:
     - ca: blanc pur
       en: pure white
       es: blanco puro
   - word: 真実
-    kana: しんじつ
+    kana: しん・じつ
     translations:
     - ca: veritat
       en: truth
