--- a/_kanji/0158.md
+++ b/_kanji/0158.md
@@ -17,13 +17,13 @@ meaning:
 
 compound_words:
   - word: 旅行する
-    kana: りょこうする
+    kana: りょ・こう・する
     translations:
     - ca: viatjar
       en: to take a trip
       es: viajar
   - word: 旅館
-    kana: りょかん
+    kana: りょ・かん
     translations:
     - ca: hotel d'estil japonès
       en: Japanese-style hotel
