--- a/_kanji/0159.md
+++ b/_kanji/0159.md
@@ -17,19 +17,19 @@ meaning:
 
 compound_words:
   - word: 世話をする
-    kana: せわをする
+    kana: せ・わ・を・する
     translations:
     - ca: tenir cura de
       en: to take care of
       es: cuidar de
   - word: 世の中
-    kana: よのなか
+    kana: よ・の・なか
     translations:
     - ca: món; societat
       en: world; society
       es: mundo; sociedad
   - word: ２１世紀
-    kana: にじゅういっせいき
+    kana: に・じゅう・いっ・せい・き
     translations:
     - ca: segle XXI
       en: 21st century
