--- a/_kanji/0160.md
+++ b/_kanji/0160.md
@@ -17,13 +17,13 @@ meaning:
 
 compound_words:
   - word: 世界
-    kana: せかい
+    kana: せ・かい
     translations:
     - ca: món
       en: world
       es: mundo
   - word: 政界
-    kana: せいかい
+    kana: せい・かい
     translations:
     - ca: mòn polític
       en: political world
