--- a/_kanji/0132.md
+++ b/_kanji/0132.md
@@ -20,7 +20,7 @@ compound_words:
     kana: わか・れる
     translations:
     - ca: separar
-      en: separate
+      en: to separate
       es: separar
   - word: 別々に
     kana: べつ・べつ・に
@@ -32,12 +32,12 @@ compound_words:
     kana: く・べつ・する
     translations:
     - ca: distingir
-      en: distinguish
+      en: to distinguish
       es: distinguir
   - word: 分別する
     kana: ぶん・べつ・する
     translations:
     - ca: classificar
-      en: classify
+      en: to classify
       es: clasificar
 ---
