--- a/_kanji/0136.md
+++ b/_kanji/0136.md
@@ -26,7 +26,7 @@ compound_words:
     kana: ふ・そく・する
     translations:
     - ca: insuficiència
-      en: run short
+      en: to run short
       es: insuficiencia
   - word: 不安な
     kana: ふ・あん・な
