--- a/_kanji/0140.md
+++ b/_kanji/0140.md
@@ -32,7 +32,7 @@ compound_words:
     kana: いそ・ぐ
     translations:
     - ca: pressa
-      en: hurry
+      en: to hurry
       es: prisa
   - word: 急用
     kana: きゅう・よう
