--- a/_kanji/0002.md
+++ b/_kanji/0002.md
@@ -31,7 +31,7 @@ compound_words:
   - word: インダス川
     kana: インダス・かわ
     translations:
-    - ca: L'Indus
-      en: the Indus River
-      es: el Río Indo
+    - ca: Indus, l'
+      en: Indus River, the
+      es: Río Indo, el
 ---
