--- a/_kanji/0136.md
+++ b/_kanji/0136.md
@@ -25,9 +25,9 @@ compound_words:
   - word: 不足する
     kana: ふ・そく・する
     translations:
-    - ca: insuficiència
+    - ca: quedar-se curt -a
       en: to run short
-      es: insuficiencia
+      es: quedarse corto, ta
   - word: 不安な
     kana: ふ・あん・な
     translations:
