--- a/_kanji/0114.md
+++ b/_kanji/0114.md
@@ -19,9 +19,9 @@ compound_words:
   - word: 東京都
     kana: とう・きょう・と
     translations:
-    - ca: Tòquio, metròpoli de
-      en: Tokyo, metropolis of
-      es: Tokio, metrópolis de
+    - ca: Tòquio, Metròpoli de
+      en: Tokyo Metropolis
+      es: Tokio, Metrópolis de
   - word: 都合がいい
     kana: つ・ごう・が・いい
     translations:
