--- a/_kanji/0115.md
+++ b/_kanji/0115.md
@@ -19,15 +19,15 @@ compound_words:
   - word: 京都府
     kana: きょう・と・ふ
     translations:
-    - ca: Kyoto, prefectura de
-      en: Kyoto prefecture
-      es: Kioto, prefectura de
+    - ca: Kyoto, Prefectura de
+      en: Kyoto Prefecture
+      es: Kioto, Prefectura de
   - word: 大阪府
     kana: おお・さか・ふ
     translations:
-    - ca: Osaka, prefectura de
-      en: Osaka prefecture
-      es: Osaka, prefectura de
+    - ca: Osaka, Prefectura de
+      en: Osaka Prefecture
+      es: Osaka, Prefectura de
   - word: 政府
     kana: せい・ふ
     translations:
