--- a/_kanji/0116.md
+++ b/_kanji/0116.md
@@ -19,9 +19,9 @@ compound_words:
   - word: 山口県
     kana: やま・ぐち・けん
     translations:
-    - ca: Yamaguchi, prefectura de
-      en: Yamaguchi prefecture
-      es: Yamaguchi, prefectura de
+    - ca: Yamaguchi, Prefectura de
+      en: Yamaguchi Prefecture
+      es: Yamaguchi, Prefectura de
   - word: 県知事
     kana: けん・ち・じ
     translations:
