--- a/_kanji/0117.md
+++ b/_kanji/0117.md
@@ -19,9 +19,9 @@ compound_words:
   - word: 京都市
     kana: きょうと・し
     translations:
-    - ca: Kyoto, ciutat de
-      en: Kyoto city
-      es: Kioto, ciudad de
+    - ca: Kyoto, Ciutat de
+      en: Kyoto City
+      es: Kioto, Ciudad de
   - word: 市長
     kana: し・ちょう
     translations:
