--- a/_kanji/0118.md
+++ b/_kanji/0118.md
@@ -19,15 +19,15 @@ compound_words:
   - word: 北区
     kana: きた・く
     translations:
-    - ca: Kita, districte de
-      en: Kita ward
-      es: Kita, distrito de
+    - ca: Kita, Districte de
+      en: Kita Ward
+      es: Kita, Distrito de
   - word: 文京区
     kana: ぶん・きょう・く
     translations:
-    - ca: Bunkyō, districte de
-      en: Bunkyō ward
-      es: Bunkyō, distrito de
+    - ca: Bunkyō, Districte de
+      en: Bunkyō Ward
+      es: Bunkyō, Distrito de
   - word: 区長
     kana: く・ちょう
     translations:
