--- a/_kanji/0138.md
+++ b/_kanji/0138.md
@@ -25,9 +25,9 @@ compound_words:
   - word: 元日
     kana: がん・じつ
     translations:
-    - ca: Any Nou、Dia d'
+    - ca: (el dia d') Any Nou
       en: New Year's Day
-      es: Año Nuevo, Día de
+      es: (el día de) Año Nuevo
   - word: 紀元前
     kana: き・げん・ぜん
     translations:
