--- a/_kanji/0160.md
+++ b/_kanji/0160.md
@@ -25,7 +25,7 @@ compound_words:
   - word: 政界
     kana: せい・かい
     translations:
-    - ca: mòn polític
+    - ca: món polític
       en: political world
       es: mundo político
 ---
