--- a/_kanji/0140.md
+++ b/_kanji/0140.md
@@ -31,9 +31,9 @@ compound_words:
   - word: 急ぐ
     kana: いそ・ぐ
     translations:
-    - ca: pressa
+    - ca: afanyar-se
       en: to hurry
-      es: prisa
+      es: apresurarse
   - word: 急用
     kana: きゅう・よう
     translations:
