--- a/_kanji/0134.md
+++ b/_kanji/0134.md
@@ -19,9 +19,9 @@ compound_words:
   - word: 便り
     kana: たよ・り
     translations:
-    - ca: carta
-      en: letter
-      es: carta
+    - ca: notícies
+      en: tidings
+      es: noticias
   - word: 郵便局
     kana: ゆう・びん・きょく
     translations:
