--- a/_kanji/0018.md
+++ b/_kanji/0018.md
@@ -38,6 +38,6 @@ compound_words:
     kana: や・お・や
     translations:
     - ca: verduleria
-      en: vegetable shop
+      en: greengrocer
       es: verdulería
 ---
