--- a/_kanji/0032.md
+++ b/_kanji/0032.md
@@ -16,7 +16,7 @@ meaning:
       es: こども (niño)
 
 compound_words:
-  - word: 子ども
+  - word: 子供
     kana: こ・ども
     translations:
       - ca: infant
