--- a/_kanji/0161.md
+++ b/_kanji/0161.md
@@ -19,7 +19,7 @@ compound_words:
   - word: 仕事
     kana: し・ごと
     translations:
-    - ca: treball
+    - ca: feina
       en: job
       es: trabajo
   - word: 仕方がない
